welcome.lessons.welcome.array.search.Extrema.scala.error
extrema:5: error: not found: value num
    if (num(i)>max) {
        ^extrema:6: error: not found: value num
      max=num(i)
          ^extrema:8: error: not found: value num
    if (num(i)<min) {
        ^extrema:9: error: not found: value num
      min=num(i)
          ^