welcome.lessons.welcome.array.search.Extrema.scala.code
def extrema(nums:Array[Int]): Int = {
  var max : Int = nums(0)
  var min : Int = nums(0)
  for (i <- 0 to nums.length-1){
    if (num(i)>max) {
      max=num(i)
    }
    if (num(i)<min) {
      min=num(i)
    }
  }
  return max-min
}